# android-cpufeatures-rs

./: Cargo.toml  README.md  build.rs  src.c
examples/log-cpufeatures/: Cargo.toml
examples/log-cpufeatures/src/: main.rs
src/: lib.rs
